# cmake-runner

./: LICENSE  README.md  pyproject.toml
cpr/: cpr.py
